# Building-and-Deploying-WebAssembly-Apps

./: README.md
Chapter 01/: 1_why_webassembly.md  add.asm.js  add.wasm.js
Chapter 02/: 2_webassembly_from_scratch.md  createdocx.sh  sointutestsong.js
Chapter 03/: .gitignore  3_fast_webassembly.md  add.c  add.ts  add.wasm  count.c  count.ts  count.wasm  createdocx.sh  garbage.js  garbage.ts  testtonegenerator.js  tonegenerator.html  tonegenerator.processor.js  tonegenerator.ts  tonegenerator.wasm  tonegenerator.wat  tonegeneratornewstaticarray.ts  tonegeneratorsnewtaticarray.wat  tonegeneratorstaticarray.ts  tonegeneratorstaticarray.wat  webcompiler.html
Chapter 04/: 4_optimizing_wasm.md  add.c  boundscheck-asc.wasm  boundscheck-asc.wat  boundscheck-wasmopt.wasm  boundscheck-wasmopt.wat  boundscheck.c  boundscheck.ts  boundscheck.wasm  boundscheck.wat  canvaslivecode.html  compute-asc-optimized.wasm  compute-asc.wasm  compute-asc.wat  compute-optimized.wasm  compute-optimized.wat  compute.c  compute.ts  compute.wasm  compute.wat  count.rs  count.wasm  count.wat  createdocx.sh  gptchat.txt  meta-dce.json  nativemathfsinetonegenerator.ts  nativemathfsinetonegenerator.wasm  runcompute.js  sinetonegenerator.ts  sinetonegenerator.wasm  useadd.rs  useadd.wasm
Chapter 05/: .gitignore  5_emscripten.md  createdocx.sh  helloworld.c  jscallback.cpp  modplayer.html  modplayer2.c  modplayer2.html  printfile.cpp  sdlhello.c  sdlhello.html  sdlhello.js  wasm-mod-player-dce.json
Chapter 06/: 6_wasmgit.md  createdocx.sh  minimumwasmgit.html  serviceworker.js
Chapter 07/: 7_rust.md  createdocx.sh
Chapter 08/: 8_quickjs.md  createdocx.sh
Chapter 09/: 9_wasm2c.md  createdocx.sh
Chapter 09/wasmplugin/: .gitignore  CMakeLists.txt  WasmSynth.cpp  build.sh  instrlib.c  instruments.c  instruments.h  setup.sh
Chapter 10/: 10_async.md  asyncsleep.wasm  asyncsleep.wat  createdocx.sh  sleep.wasm  sleep.wat  tomorrow.wasm  tomorrow.wat
Chapter 11/: .gitignore  11_wasi.md  add.embed.wat  add.wat  demo.wit  (+3 more)
Chapter 11/rust_components/add/: .gitignore  Cargo.toml
Chapter 11/rust_components/add/src/: bindings.rs  lib.rs
Chapter 11/rust_components/add/wit/: deps.toml  world.wit
Chapter 11/rust_components/http-handler-with-tonegenerator/: .gitignore  Cargo.toml  tonegenerator.ts  tonegenerator.wit
Chapter 11/rust_components/http-handler-with-tonegenerator/src/: lib.rs
Chapter 13/spinapp/imageclassify/: Cargo.toml  deployment.yaml  keda-http-addon.sh  spin.toml  spin_deployment.yaml  spinapp.yaml  test.sh  test_auth.sh  test_load_local.sh
Chapter 13/spinapp/imageclassify/src/: auth.rs  lib.rs
Chapter 13/spinapp/imageclassify/static/: imageclassify.html
(+98 files in other folders)
