[package]
name = "httphandler"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.4.2"
wasi = { git ="https://github.com/bytecodealliance/wasi.git", features = ["macros"] }
wit-bindgen = "0.20.0"
wit-bindgen-rt = "0.20.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
debug = false
strip = 'symbols'