[package]
name = "imageclassify"
authors = ["Peter Salomonsen <pjsalomonsen@gmail.com>"]
description = "imageclassify web component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "2.2.0"
image = "0.25.1"
tract-onnx = "0.21.2"
base64 = "0.22.0"
serde = "1.0.197"
serde_json = "1.0.115"
sha2 = "0.10.8"

[profile.release]
lto = true
opt-level = 'z'
debug = false
strip = 'symbols'
